# mirea-pytorch

./: README.md  __init__.py  dataUpload.py
ViT/: __init__.py  model.py  pyproject.toml  train.py
hw3/: dataUpload.py  mirea_3_hw.ipynb  model.py  training.py
hw4/: __init__.py  dataUpload.py  model.py  train.py
